--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <div class="holder">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <!-- Add more items if needed -->
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
